fix the footer responsive by adding wrap to footer tag itself and add css for .all

--- a/test4/css/index.css
+++ b/test4/css/index.css
@@ -10,7 +10,7 @@ a {text-decoration: none; color: inherit}
 #rgb-color {color: rgba(255, 255, 255, 0.8)}
 
 .boxing {border: 1px solid red}
-
+.all {min-width: 1000px; min-height: 100%;}
 .wrap {width: 1200px; margin: 0 auto}
 .header {width: 1000px; height: 150px; background:rgba(0,0,0, 0.8)}
 .logo {float: left;}
